<?xml version="1.0"?>
<package format="2">
  <name>roseus_resume</name>
  <version>0.0.0</version>
  <description>The roseus_resume package</description>
  <maintainer email="affonso@jsk.imi.i.u-tokyo.ac.jp">affonso</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pr2eus</build_depend> <!-- for robot interface -->
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pr2eus</exec_depend> <!-- for robot interface -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
